# AnkiNotes_md

./: Cargo.toml  LICENSE  README.md  rust_base.md  setting.toml  test.json  test.md
src/: anki.rs  anki_connector.rs  cli.rs  main.rs  task.rs
