[package]
name = "akmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
home = "0.5"
genanki-rs = "0.1.1"
pulldown-cmark = "0.8.0"
pcre2 = "*"
colored = "2.0"
prettytable-rs = "0.8"
regex = "1.4"
serde_json = "1.0"
walkdir = "2.3"
structopt = "0.3.21"
chrono = { version = "0.4",features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.10"}
