[package]
name = "akmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
genanki-rs = "0.1.1"
pulldown-cmark = "0.8.0"
regex = "1.4"
walkdir = "2.3"
structopt = "0.3.21"
config = "0.10.1"
anyhow = "1.0.35"