[package]
name = "akmd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"

[dependencies]
genanki-rs = "0.1.1"
pulldown-cmark = "0.9.1"
regex = "1.4"
walkdir = "2.3"
structopt = "0.3.21"
config = "0.11.0"
anyhow = "1.0.53"
syntect = "4.6.0"
log = "0.4"
simple_logger = "2.1.0"
lazy_static = "1.4.0"